--- a/nft-drop-starter-project-final-master/app/public/index.html
+++ b/nft-drop-starter-project-final-master/app/public/index.html
@@ -7,8 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Mint a limited NFT drop on Solana."
+      content="Candy Machine UI"
     />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -23,11 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Candy Drop</title>
-    <meta name="title" content="Candy Drop" />
-    <meta name="description" content="Mint a limited NFT drop on Solana." />
-    
-    </head>
+    <title>Candy Machine UI</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
